--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
-langchain-google-genai
-langchain
 pymongo
-python-dotenv
 requests
-dnspython
+python-dotenv
+langchain-google-genai>=2.0.0
+google-generativeai>=0.8.0
