add thinking to the system

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit
-pymongo
-requests
+langchain
+langchain-groq
 python-dotenv
-langchain-google-genai>=2.0.0
-google-generativeai>=0.8.0
+requests
